--- a/Server-Side/package.json
+++ b/Server-Side/package.json
@@ -1,12 +1,12 @@
 {
-  "homepage": "https://imgovindjee.github.io/Tic-Tac-Toe-",
+  "homepage": "https://imgovindjee.github.io/frontend",
   "name": "tic-tac-toe-multiplayer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
-    "dploy": "gh-pages -d dist",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
